[package]
name = "cogs"
version = "0.1.0"
authors = ["jasoncg"]
edition = "2018"

[dependencies]
chrono = {version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
serde = {version = "1.0.163", features = ["derive"]}
serde_yaml = "0.9.21"
sysinfo = { version = "0.29.0", features = ["serde"] }
tui = "0.19.0"
